flux/system/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - flux-webhook-receiver.ops.misery.systems
      secretName: flux-webhook-receiver-ops-misery-systems
  rules:
    - host: flux-webhook-receiver.ops.misery.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
